changing @Failure to standard text
